--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
             <meta http-equiv="X-UA-Compatible" content="IE-dge">
             <meta name="Viewport" content="width=device-width", initial-scale="1.0">
             <title>Welzy Portfolio</title>
-            <link rel="icon" type="image/png" sizes="16x16" href="images/welzlogo.png">
+            <link rel="icon" type="image/png" sizes="16x16" href="Images/welzlogo.png">
             <link rel="stylesheet" href="Style.Css">
             <script src="https://kit.fontawesome.com/a8cf530112.js" crossorigin="anonymous"></script>
             <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -19,7 +19,7 @@
                         <source src="Images/Video.mp4" type="video/mp4">
                 </video>
                 <nav>
-                        <img src="images/welzlogo.png" class="logo.png">      
+                        <img src="Images/welzlogo.png" class="logo.png">      
                         <ul id="sidemenu">
                                 <li><a href="#header">Home</a></li>
                                 <li><a href="#about">About</a></li>
@@ -158,7 +158,7 @@
            <div class="worklist">
                 <div class="work">
                         <video autoplay loop muted plays-inline class="video">
-                                <source src="images/Work-1.mp4" type="video/mp4">
+                                <source src="Images/Work-1.mp4" type="video/mp4">
                         </video>                     
                         <div class="layer">
                                 <h3>Video Editing</h3>
@@ -169,7 +169,7 @@
                 </div>
                 <div class="work">
                         <video autoplay loop muted plays-inline class="video">
-                                <source src="images/Work-2.mp4" type="video/mp4">
+                                <source src="Images/Work-2.mp4" type="video/mp4">
                         </video>
                         <div class="layer">
                                 <h3>Graphic Designing / Digital Art</h3>
@@ -180,7 +180,7 @@
                 </div>
                 <div class="work">
                         <video autoplay loop muted plays-inline class="video">
-                                <source src="images/Work-3.mp4" type="video/mp4">
+                                <source src="Images/Work-3.mp4" type="video/mp4">
                         </video>
                         
                         <div class="layer">
