--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
                         <div class="layer">
                                 <h3>Graphic Designing / Digital Art</h3>
                                 <p></p>
-                                <a href="https://drive.google.com/drive/folders/1pmVeMKqJgvt32sVE8iV3_dWPHCQvdy0w?usp=drive_link"
+                                <a href="https://drive.google.com/drive/folders/12NPeq5webShzQ5hEOaU2XmF3usjOr8pA?usp=sharing"
                                 target="_blank"><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
                         </div>
                 </div>
@@ -186,7 +186,7 @@
                         <div class="layer">
                                 <h3>Social Media Managing</h3>
                                 <p></p>
-                                <a href="https://drive.google.com/drive/folders/1QM1iv0L0sjAjvBCw-_AtL3ezUR1r8S6f?usp=sharing"
+                                <a href="https://drive.google.com/drive/folders/12FTE_zIP06X3eBlNd2FwPjqI82m5GkFk?usp=sharing"
                                 target="_blank"><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
                         </div>
                 </div>
@@ -205,7 +205,7 @@
                                 <div class="social-icons">
                                         <a href="https://www.facebook.com/welzyjoshiel.onen.9"
                                         target="_blank"><i class="fa-brands fa-facebook"></i></a>
-                                        <a href="https://twitter.com/darylledp1" 
+                                        <a href="https://twitter.com/" 
                                         target="_blank"><i class="fa-brands fa-x-twitter"></i></a>
                                         <a href="https://www.instagram.com/welzy_joshiel/"
                                         target="_blank"><i class="fa-brands fa-instagram"></i></a>
@@ -275,6 +275,24 @@
             .catch(error => console.error('Error!', error.message))
         })
       </script>
+      <script>
+        // Disable text selection
+        document.onselectstart = function() {
+            return false;
+        };
+    
+        // Disable right-click context menu
+        window.addEventListener('contextmenu', function (e) {
+            e.preventDefault();
+        });
+    </script>
               
+              <script>
+                // Disable right-click context menu
+                window.addEventListener('contextmenu', function (e) {
+                    e.preventDefault();
+                });
+            </script>
+
   </body>
 </html>
